<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <Button
            android:id="@+id/getBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get" />

        <Button
            android:id="@+id/closeGetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_get"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
        tools:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/nameCrtEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/jobCrtEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:hint="@string/job"
            android:inputType="text" />

        <Button
            android:id="@+id/postBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post" />

        <Button
            android:id="@+id/closePostBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_post"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/postCreateUserResponseTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/nameUpdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/jobUpdEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:hint="@string/job"
            android:inputType="text" />

        <Button
            android:id="@+id/putBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/put" />

        <Button
            android:id="@+id/closePutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_put"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/putUpdateUserResponseTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/getUserDataTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>